--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kamas22_03",
-  "homepage": "https://andreywetrow.github.io",
+  "homepage": "https://andreywetrow.github.io/kamas22_03/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
